# VulkanCXXPlayGround

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
src/: CMakeLists.txt  cfx_app.cpp  cfx_app.hpp  cfx_buffer.cpp  cfx_buffer.hpp  cfx_camera.cpp  cfx_camera.hpp  cfx_descriptors.cpp  cfx_descriptors.hpp  cfx_device.cpp  cfx_device.hpp  cfx_frame_info.hpp  cfx_game_object.cpp  cfx_game_object.hpp  cfx_model.cpp  cfx_model.hpp  cfx_pipeline.cpp  cfx_pipeline.hpp  cfx_render_system.cpp  cfx_render_system.hpp  cfx_renderer.cpp  cfx_renderer.hpp  cfx_swapchain.cpp  cfx_swapchain.hpp  cfx_texture.cpp  cfx_texture.hpp  cfx_utils.hpp  cfx_window.cpp  cfx_window.hpp  compile.sh  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp
src/shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/systems/: cfx_point_light_system.cpp  cfx_point_light_system.hpp  cfx_render_system.cpp  cfx_render_system.hpp
src/textures/: texture_1.tga
